# ESPwait

./: .cproject  .gitignore  .project  CMakeLists.txt  comments.txt  partitions.csv  sdkconfig  sdkconfig.old
components/: .gitignore
components/S2LP_Library/: CMakeLists.txt
components/S2LP_Library/Inc/: MCU_Interface.h  My_Pins.h  My_Pins_ESPWait3.h  My_Pins_ESPWait4.h
components/S2LP_Library/Src/: MCU_Interface.c  S2LP_Gpio.c
components/aes/: CMakeLists.txt  aes.c
components/aes/include/: aes.h
components/cmd_nvs/: CMakeLists.txt  cmd_nvs.c  cmd_nvs.h
components/console/: CMakeLists.txt  console.c  console.h
components/console/cmd_nvs/: CMakeLists.txt  cmd_nvs.c  cmd_nvs.h
components/gatt_client/: CMakeLists.txt  gatt_client.c
components/gatt_server/: CMakeLists.txt  gatt_server.c
components/lorawan/: CMakeLists.txt  eui.c  eui.h  lorawan_radio.h  lorawan_types.h
components/nvs_partition/: CMakeLists.txt  eeprom.csv  nvs.csv  nvs_dadux.bat  params.csv  sx1276_deveui.csv  sx1276_params.csv
components/radio/: CMakeLists.txt  radio.c  radio_registers_SX1276.h  sx1276_hal.c  sx1276_hal.h  sx1276_radio_driver.c  sx1276_radio_driver.h
components/s2lp_console/: CMakeLists.txt  commands.c  s2lp_console.c  s2lp_console.h  shell.c  shell.h
components/s2lp_console/cmd_nvs/: cmd_nvs.c  cmd_nvs.h
components/s2lp_console/linenoise/: linenoise.c
components/spp_server/: CMakeLists.txt  spp_server.c  spp_server.h  spp_task.c  spp_task.h
main/: CMakeCache.txt  CMakeLists.txt  main.c  main.h  radio.c  shell.c  shell.h  spi_intf.c  spi_intf.h
main/S2LP_Library/Inc/: MCU_Interface.h  S2LP_Commands.h
main/S2LP_Library/Src/: S2LP_PacketHandler.c
main/certs/: certificate.pem.crt  private.pem.key  rootkey.csv
nvs_partition/: nvs.bat  nvs.csv  nvs.xlsx
